@@ -42,7 +42,7 @@
  * and fill it with values ranging from {@code 0} to {@code 9}, we can use the following code:
  *
  * {@snippet lang = java:
- * MemorySegment segment = MemorySegment.allocateNative(10 * 4, SegmentScope.auto());
+ * MemorySegment segment = Arena.ofAuto().allocate(10 * 4, 1);
  * for (int i = 0 ; i < 10 ; i++) {
  *     segment.setAtIndex(ValueLayout.JAVA_INT, i, i);
  * }
@@ -50,7 +50,8 @@
  *
  * This code creates a <em>native</em> memory segment, that is, a memory segment backed by
  * off-heap memory; the size of the segment is 40 bytes, enough to store 10 values of the primitive type {@code int}.
- * The segment is associated with an {@linkplain java.lang.foreign.SegmentScope#auto() automatic scope}. This
+ * Native segments are allocated using an {@link Arena}. An arena controls the lifetime of all the segments allocated
+ * from it. In this case, as the segment is allocated using an {@linkplain java.lang.foreign.Arena#ofAuto() automatic arena}. This
  * means that the off-heap region of memory backing the segment is managed, automatically, by the garbage collector.
  * As such, the off-heap memory backing the native segment will be released at some unspecified
  * point <em>after</em> the segment becomes <a href="../../../java/lang/ref/package.html#reachability">unreachable</a>.
@@ -72,10 +73,10 @@
  * and in a timely fashion. For this reason, there might be cases where waiting for the garbage collector to determine that a segment
  * is <a href="../../../java/lang/ref/package.html#reachability">unreachable</a> is not optimal.
  * Clients that operate under these assumptions might want to programmatically release the memory backing a memory segment.
- * This can be done, using the {@link java.lang.foreign.Arena} abstraction, as shown below:
+ * This can be done, using a <em>confined arena</em>, as shown below:
  *
  * {@snippet lang = java:
- * try (Arena arena = Arena.openConfined()) {
+ * try (Arena arena = Arena.ofConfined()) {
  *     MemorySegment segment = arena.allocate(10 * 4);
  *     for (int i = 0 ; i < 10 ; i++) {
  *         segment.setAtIndex(ValueLayout.JAVA_INT, i, i);
@@ -83,12 +84,11 @@
  * }
  *}
  *
- * This example is almost identical to the prior one; this time we first create an arena
- * which is used to allocate multiple native segments which share the same life-cycle. That is, all the segments
- * allocated by the arena will be associated with the same {@linkplain java.lang.foreign.SegmentScope scope}.
- * Note the use of the <em>try-with-resources</em> construct: this idiom ensures that the off-heap region of memory backing the
- * native segment will be released at the end of the block, according to the semantics described in Section {@jls 14.20.3}
- * of <cite>The Java Language Specification</cite>.
+ * A confined arena can be {@linkplain java.lang.foreign.Arena#close() closed}. When a confined
+ * arena is closed, all the segments allocated by it are invalidated, and become inaccessible.
+ * Note the use of the <em>try-with-resources</em> construct: this idiom ensures
+ * that the off-heap region of memory backing the native segment will be released at the end of the block, according to
+ * the semantics described in Section {@jls 14.20.3} of <cite>The Java Language Specification</cite>.
  *
  * <h3 id="safety">Safety</h3>
  *
@@ -99,7 +99,7 @@
  * Section {@jls 15.10.4} of <cite>The Java Language Specification</cite>.
  * <p>
  * Since memory segments created with an arena can become invalid (see above), segments are also validated (upon access) to make sure that
- * the scope associated with the segment being accessed is still alive.
+ * the arena from which the segment has been obtained has not been closed.
  * We call this guarantee <em>temporal safety</em>. Together, spatial and temporal safety ensure that each memory access
  * operation either succeeds - and accesses a valid location within the region of memory backing the memory segment - or fails.
  *
@@ -122,7 +122,7 @@
  *     FunctionDescriptor.of(ValueLayout.JAVA_LONG, ValueLayout.ADDRESS)
  * );
  *
- * try (Arena arena = Arena.openConfined()) {
+ * try (Arena arena = Arena.ofConfined()) {
  *     MemorySegment cString = arena.allocateUtf8String("Hello");
  *     long len = (long)strlen.invoke(cString); // 5
  * }
@@ -179,33 +179,34 @@
  * using the {@link java.lang.foreign.Linker} interface, as follows:
  *
  * {@snippet lang = java:
- * SegmentScope scope = ...
+ * Arena arena = ...
  * MemorySegment comparFunc = Linker.nativeLinker().upcallStub(
- *     intCompareHandle, intCompareDescriptor, scope);
+ *     intCompareHandle, intCompareDescriptor, arena);
  * );
  *}
  *
  * The {@link java.lang.foreign.FunctionDescriptor} instance created in the previous step is then used to
- * {@linkplain java.lang.foreign.Linker#upcallStub(java.lang.invoke.MethodHandle, FunctionDescriptor, SegmentScope) create}
+ * {@linkplain java.lang.foreign.Linker#upcallStub(java.lang.invoke.MethodHandle, FunctionDescriptor, Arena, Linker.Option...) create}
  * a new upcall stub; the layouts in the function descriptors allow the linker to determine the sequence of steps which
  * allow foreign code to call the stub for {@code intCompareHandle} according to the rules specified by the ABI of the
  * underlying platform.
- * The lifecycle of the upcall stub is tied to the {@linkplain java.lang.foreign.SegmentScope scope}
- * provided when the upcall stub is created. This same scope is made available by the {@link java.lang.foreign.MemorySegment}
- * instance returned by that method.
+ * The lifecycle of the upcall stub is tied to the {@linkplain java.lang.foreign.Arena arena}
+ * provided when the upcall stub is created. If the provided arena is a confined arena,
+ * the upcall stub will be deallocated when the confined arena is {@linkplain java.lang.foreign.Arena#close() closed}.
  *
  * <h2 id="restricted">Restricted methods</h2>
  * Some methods in this package are considered <em>restricted</em>. Restricted methods are typically used to bind native
  * foreign data and/or functions to first-class Java API elements which can then be used directly by clients. For instance
- * the restricted method {@link java.lang.foreign.MemorySegment#ofAddress(long, long, SegmentScope)}
- * can be used to create a fresh segment with the given spatial bounds out of a native address.
+ * the restricted method {@link java.lang.foreign.MemorySegment#reinterpret(long)} ()}
+ * can be used to create a fresh segment with the same address and temporal bounds,
+ * but with the provided size. This can be useful to resize memory segments obtained when interacting with native functions.
  * <p>
  * Binding foreign data and/or functions is generally unsafe and, if done incorrectly, can result in VM crashes,
- * or memory corruption when the bound Java API element is accessed. For instance, in the case of
- * {@link java.lang.foreign.MemorySegment#ofAddress(long, long, SegmentScope)}, if the provided spatial bounds are
- * incorrect, a client of the segment returned by that method might crash the VM, or corrupt
- * memory when attempting to access said segment. For these reasons, it is crucial for code that calls a restricted method
- * to never pass arguments that might cause incorrect binding of foreign data and/or functions to a Java API.
+ * or memory corruption when the bound Java API element is accessed. For instance, incorrectly resizing a native
+ * memory sgement using {@link java.lang.foreign.MemorySegment#reinterpret(long)} can lead to a JVM crash, or, worse,
+ * lead to silent memory corruption when attempting to access the resized segment. For these reasons, it is crucial for
+ * code that calls a restricted method to never pass arguments that might cause incorrect binding of foreign data and/or
+ * functions to a Java API.
  * <p>
  * Given the potential danger of restricted methods, the Java runtime issues a warning on the standard error stream
  * every time a restricted method is invoked. Such warnings can be disabled by granting access to restricted methods
